[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameFXexport/SPRITESHEET_Files/FireCast_96x96.png" type="Texture" id=1]
[ext_resource path="res://Player/Fireball.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Trail.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 13.4672

[node name="Fireball" type="Area2D"]
collision_layer = 8
collision_mask = 34
script = ExtResource( 2 )

[node name="Trail" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 0, 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 0.883881 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="FirePoint" type="Node2D" parent="."]
position = Vector2( -12.2499, 12.0271 )

[node name="FirePoint2" type="Node2D" parent="."]
position = Vector2( 0.113617, -15.1453 )

[node name="FirePoint3" type="Node2D" parent="."]
position = Vector2( 11.8044, 12.2499 )

[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
